--- a/data/dataset.yaml
+++ b/data/dataset.yaml
@@ -1,7 +1,7 @@
-path: ../data/processed
-train: ../data/processed/train/images
-val: ../data/processed/val/images
-test: ../data/processed/test/images
+path: data/processed
+train: data/processed/train/images
+val: data/processed/val/images
+test: data/processed/test/images
 
 names:
   0: live
